Add base24 template and rename repo to tinted-termite

--- a/templates/config.yaml
+++ b/templates/config.yaml
@@ -1,3 +1,9 @@
-default:
+base16:
     extension: .config
     output: themes
+    supported-systems: [base16]
+
+base24:
+    extension: .config
+    output: themes
+    supported-systems: [base24]
